<resources>
    <string name="app_name">DotUI Center</string>
	<string name="ui_center_summary_title">Interface Tweaks</string>
    <string name="title_welcome">Welcome to the DotUI Center</string>
    <string name="subtitle_welcome">Expand Below View to use available options</string>
    <string name="change_accent_title">Change Accent Theme</string>
    <string name="change_accent_example_summary">Pixel</string>
    <string name="auto_mode_title">Extract Overlay from Wallpaper</string>
    <string name="auto_mode_summary">Select Overlay from wallpaper accent</string>
    <string name="qs_tint_tacker_title">Track QS Tiles color Accent</string>
    <string name="qs_tint_tracker_summary">Make QS Tiles to track colorAccent of System if is active and to track normal color when it\'s disabled</string>
    <string name="settings_overlay_light">Settings Overlay [Light]</string>
    <string name="settings_overlay_dark">Settings Overlay [Dark]</string>
    <string name="settings_overlay_black">Settings Overlay [Black]</string>
    <string name="qs_overlay_light">Quick Settings Overlay [Light]</string>
    <string name="qs_overlay_dark">Quick Settings Overlay [Dark]</string>
    <string name="qs_overlay_black">Quick Settings Overlay [Black]</string>
    <string name="rs_title0">Apply a Dark Theme.</string>
    <string name="rs_title1">Make your Android more colourful!</string>
    <string name="rs_title2">Be an amoled black fan!</string>
    <string name="rs_summary0">Just a bit of dark doesn\'t break anything, right?</string>
    <string name="rs_summary1">Play with color accents.</string>
    <string name="rs_summary2">Highly recommended for amoled display users, it can save the battery.</string>
    <string name="main_title">Welcome to the Interface Center</string>
    <string name="rs">Recommended Settings</string>
    <string name="accent_changer">Accent Changer</string>
    <string name="package_name">Package Name</string>
    <string name="custom_accent">Custom Accent</string>
    <string name="control_the_interface">Control the Interface</string>
    <string name="overlay_color">Overlay Color</string>
    <string name="accent_color">Accent Color</string>
    <string name="misc_settings">Misc Settings</string>
    <string name="apply">Apply Selected Settings</string>
    <string name="done">Done</string>
    <string name="rs_dark">Open Overlay Color then swipe to right one time</string>
    <string name="rs_ac">Open Accent Color and play with it</string>
    <string name="rs_black">Open Overlay Color then swipe to right two times</string>
	<string name="date">Friday, Jul 6</string>
    <string name="clock">12:00</string>
    <string name="batt_per">100%</string>
    <string name="customize_qs_panel">Customize QS Panel</string>
    <string name="set_qspanel_background_alpha">Set QSPanel Background Alpha</string>
    <string name="set_qs_tiles_background_alpha">Set QS Tiles Background Alpha</string>
    <string name="available_only_for_circle_qs_tiles_background_shape">Available only for Circle QS Tiles Background Shape</string>
    <string name="enable_circle_background_for_qs_tiles">Enable Circle Background for QS Tiles</string>
    <string name="active_tiles_will_track_accent_color_and_inactive_darker_lighter_color_theme_dependent">Active Tiles will track accent color and inactive darker/lighter color (theme dependent)</string>
    <string name="set_qs_header_background_color">Set QS Header Background Color</string>
    <string name="go_back">Go back</string>
</resources>
