<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="55dp"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/customize_qs_panel"
                android:textColor="?android:attr/colorAccent"
                android:textSize="20sp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="1dp">

                <include
                    layout="@layout/qs_panel"
                    android:layout_width="match_parent"
                    android:layout_height="250dp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="-103dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/google_sans_bold"
                        android:text="@string/set_qspanel_background_alpha"
                        android:textColor="?android:attr/colorAccent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/google_sans"
                            android:text="0%" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:fontFamily="@font/google_sans"
                            android:gravity="end"
                            android:text="100%"
                            android:textAlignment="viewEnd" />

                    </LinearLayout>

                    <SeekBar
                        android:id="@+id/qs_alpha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:max="255" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/google_sans_bold"
                        android:text="@string/set_qs_tiles_background_alpha"
                        android:textColor="?android:attr/colorAccent" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/google_sans"
                        android:text="@string/available_only_for_circle_qs_tiles_background_shape"
                        android:textSize="13sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="4dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/google_sans"
                            android:text="0%" />

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:fontFamily="@font/google_sans"
                            android:gravity="end"
                            android:text="100%"
                            android:textAlignment="viewEnd" />

                    </LinearLayout>

                    <SeekBar
                        android:id="@+id/qs_tiles_bg_alpha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:max="255" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingEnd="8dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView18"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:fontFamily="@font/google_sans_bold"
                                android:text="@string/enable_circle_background_for_qs_tiles"
                                android:textColor="?android:attr/colorAccent" />

                            <TextView
                                android:id="@+id/textView20"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="2dp"
                                android:fontFamily="@font/google_sans"
                                android:text="@string/active_tiles_will_track_accent_color_and_inactive_darker_lighter_color_theme_dependent"
                                android:textSize="13sp" />
                        </LinearLayout>

                        <Switch
                            android:id="@+id/qs_tiles_enable_circle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="8dp"
                        android:gravity="center_vertical|end"
                        android:orientation="horizontal"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp">

                        <TextView
                            android:id="@+id/textView21"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:fontFamily="@font/google_sans_bold"
                            android:paddingEnd="4dp"
                            android:paddingStart="4dp"
                            android:text="@string/set_qs_header_background_color"
                            android:textColor="?android:attr/colorAccent" />

                        <ImageButton
                            android:id="@+id/open_picker"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_gravity="end"
                            android:background="?android:attr/selectableItemBackgroundBorderless"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/ic_color_engine" />
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.CardView
        android:id="@+id/go_back"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:layout_marginStart="-32dp"
        android:clickable="true"
        app:cardCornerRadius="32dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="32dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/google_sans_bold"
                android:gravity="center_vertical"
                android:text="@string/go_back"
                android:textColor="?android:attr/colorAccent"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="2dp"
                android:tint="?android:attr/colorAccent"
                app:srcCompat="@drawable/ic_back" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>