<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/int_ct"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:orientation="vertical"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorAccent"
            android:paddingTop="25dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/colorAccent"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:navigationIcon="@android:color/transparent"
                app:subtitle="Choice between below options"
                app:subtitleTextColor="?android:attr/colorSecondary"
                app:title="Customize the Inteface"
                app:titleTextColor="?android:attr/textColorPrimaryInverse" />

            <ImageButton
                android:id="@+id/close_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="12dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="?android:attr/colorBackground"
                app:srcCompat="@drawable/ic_expand_more" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="12dp"
                android:paddingTop="12dp">

                <LinearLayout
                    android:id="@+id/overlay_c"
                    android:layout_width="220dp"
                    android:layout_height="110dp"
                    android:background="@drawable/outline_bg"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:padding="10dp"
                        app:srcCompat="@drawable/ic_color_engine" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_bold"
                        android:text="@string/overlay_color"
                        android:textAlignment="center"
                        android:textSize="13sp" />
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/oc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:background="@drawable/outline_bg"
                    android:padding="4dp"
                    android:visibility="gone">

                </FrameLayout>

                <LinearLayout
                    android:id="@+id/accent_c"
                    android:layout_width="220dp"
                    android:layout_height="110dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/outline_bg"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView31"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:padding="10dp"
                        android:tint="?android:attr/colorAccent"
                        app:srcCompat="@drawable/ic_color_accent" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_bold"
                        android:text="@string/accent_color"
                        android:textAlignment="center"
                        android:textSize="13sp" />
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/ac"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:background="@drawable/outline_bg"
                    android:padding="4dp"
                    android:visibility="gone">

                </FrameLayout>

                <LinearLayout
                    android:id="@+id/misc_s"
                    android:layout_width="220dp"
                    android:layout_height="110dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/outline_bg"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:padding="10dp"
                        android:tint="?android:attr/colorAccent"
                        app:srcCompat="@drawable/ic_widgets_48px" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_bold"
                        android:text="@string/misc_settings"
                        android:textAlignment="center"
                        android:textSize="13sp" />
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/ms"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:background="@drawable/outline_bg"
                    android:visibility="gone">

                </FrameLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/colorBackground"
        android:elevation="20dp">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="12dp"
            android:fontFamily="@font/google_sans_bold"
            android:text="@string/apply"
            android:textSize="16sp" />

        <Button
            android:id="@+id/apply_settings"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/button_bg"
            android:padding="6dp"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColorPrimaryInverse" />
    </RelativeLayout>

</RelativeLayout>