<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <ImageView
        android:id="@+id/wall"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="matrix"
        app:srcCompat="@drawable/wall" />

    <LinearLayout
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingEnd="8dp"
            android:paddingStart="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/clock_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/clock"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/date"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/precentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/batt_per"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/battery"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_battery_full" />

                <TextView
                    android:id="@+id/clock_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clock"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/qs_panel"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/qs_background"
            android:elevation="4dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingEnd="12dp"
            android:paddingStart="12dp">

            <View
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/qs_tile_active"
                android:gravity="center">

            </View>

            <View
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="18dp"
                android:background="@drawable/qs_tile_inactive"
                android:gravity="center">

            </View>

            <View
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="18dp"
                android:background="@drawable/qs_tile_active"
                android:gravity="center">

            </View>

            <View
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="18dp"
                android:background="@drawable/qs_tile_inactive"
                android:gravity="center">

            </View>

            <View
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="18dp"
                android:background="@drawable/qs_tile_inactive"
                android:gravity="center">

            </View>

            <View
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="18dp"
                android:background="@drawable/qs_tile_inactive"
                android:gravity="center">

            </View>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>